Implemented proper session handling, todo: move to redis, test error handling, fix swagger json structure
